<resources>
    <string name="app_name">RanobeUA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="send">send</string>
    <string name="myComment">мій коментар</string>
    <string name="login">Увійти</string>
    <string name="resetPassword">змінити пароль</string>
    <string name="email">email</string>
    <string name="password">passwrod</string>
    <string name="originalname">originalName</string>
    <string name="author">author</string>
    <string name="year">year</string>
    <string name="name">name</string>
    <string name="status">status</string>
    <string name="team">team</string>
    <string name="urlteam">urlTeam</string>
    <string name="description">description</string>
    <string name="download">Download</string>
    <string name="register">зареєструватись</string>
    <string name="loginInAccount">увійти в акаунт</string>
    <string name="level">level:</string>
    <string name="read_chapters">read chapters:</string>
    <string name="team_id">team id:</string>
</resources>