<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".mainApp.fragments.ranobe.ChapterFragment">


    <TextView
        android:id="@+id/chapterTitle"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.7"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollChapter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chapterTitle"
        app:layout_constraintWidth_percent="0.9">

        <LinearLayout
            android:id="@+id/chapterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textChapter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="600dp"
                android:fontFamily="@font/allerta"
                android:textColor="@color/white"
                android:textSize="8pt" />

            <androidx.appcompat.widget.ActionMenuView
                android:id="@+id/chapterBar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/backChapter"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/back" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/nextChapter"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/next" />

            </androidx.appcompat.widget.ActionMenuView>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/commentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <EditText
                    android:id="@+id/commentText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:textColor="@color/grey"
                    android:hint="@string/myComment"
                    android:gravity="center"
                    android:textColorHint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/sendComment"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sendComment"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/send"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCommentsChapter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>